--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,5 +2,213 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#banner {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 3.5rem 0rem;
+  background-color: #efaf96;
+}
+
+#banner h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1.8rem;
+  color: #fff;
+}
+
+#banner #links {
+  padding-top: 1rem;
+}
+
+#banner #links a {
   font-family: sans-serif;
+  font-weight: bold;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  margin-top: 1rem;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  margin-left: 1rem;
+}
+
+#banner #links a:hover {
+  color: yellow;
+}
+
+main {
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+}
+
+main #cards {
+  width: 90%;
+  margin: auto;
+  padding: 4rem 0rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+main #cards .card {
+  width: 250px;
+  height: auto;
+  border: 2px solid #efaf96;
+  border-radius: 5px;
+  margin: 1rem;
+}
+
+main #cards .card .cardImage {
+  width: 100%;
+  height: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+
+main #cards .card img {
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+main #cards .card .cardDetails {
+  width: 100%;
+  height: 70px;
+  font-family: sans-serif;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: #efaf96;
+}
+
+main #cards .card .cardDetails .cardTitle {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+  color: #fff;
+}
+main #cards .card .cardDetails .cardBadge {
+  background-color: #00674c;
+  color: #fff;
+  padding: 0.2rem;
+  border-radius: 5px;
+}
+
+#formwrapper {
+  padding: 5rem 0rem;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#formwrapper form {
+  width: 35rem;
+  /* border: 1px solid #efaf96; */
+}
+
+#formwrapper form .divider {
+  width: 100%;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#formwrapper form .divider input[type='text'] {
+  width: 100%;
+  height: 3.5rem;
+  border: 0px solid #fff;
+  background-color: #f4f4f4;
+  font-family: sans-serif;
+  font-size: 1rem;
+  padding-left: 1rem;
+  outline: none;
+}
+
+#formwrapper form .divider label {
+  font-family: sans-serif;
+  font-size: 1rem;
+  color: #4f4f4f;
+  margin-bottom: 1rem;
+}
+
+#formwrapper form .divider button {
+  height: 3.5rem;
+  border: 0px solid #fff;
+  background-color: #efaf96;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+#formwrapper form .divider button:hover {
+  background-color: #ffbaa0;
+}
+
+/* Table */
+#table-wrapper {
+  padding: 5rem 0rem;
+}
+
+#table-wrapper table {
+  width: 80%;
+  margin: auto;
+  font-family: sans-serif;
+  background-color: #fafafa;
+}
+
+#table-wrapper table th {
+  padding: 0.8rem 0rem;
+  color: #fff;
+  background-color: #f0af90;
+}
+
+#table-wrapper table td {
+  text-align: center;
+  padding: 0.8rem 0rem;
+  color: #464646;
+}
+
+#table-wrapper table td a {
+  color: #464646;
+  text-decoration: none;
+  margin-right: 1rem;
+}
+
+#table-wrapper table td a:hover {
+  color: #f0af90;
+  border-bottom: 2px solid #f0af90;
+}
+
+#table-wrapper table tr {
+  cursor: pointer;
+  background-color: #fafafa;
+  transition: background-color 0.3s ease;
+}
+#table-wrapper table tr:hover {
+  background-color: #ececec;
+}
+
+footer {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #efaf96;
+}
+
+footer p {
+  font-family: sans-serif;
+  color: #fff;
 }
